--- a/html/about.html
+++ b/html/about.html
@@ -60,21 +60,21 @@
             <p>услуги</p>
             <h2>Ключевые направления</h2>
             <ul>
-                <li><a href=""> <img src="../image/directions/image1.svg" alt=""> Наружная реклама</a>
+                <li><a href=""> <img src="../image/directions/image1.svg" width="55" alt=""> Наружная реклама</a>
                 </li>
-                <li><a href=""> <img src="../image/directions/image2.svg" alt=""> Широкоформатная печать</a>
+                <li><a href=""> <img src="../image/directions/image2.svg" width="55" alt=""> Широкоформатная печать</a>
                 </li>
-                <li><a href=""> <img src="../image/directions/image3.svg" alt=""> Рекламная полиграфия</a>
+                <li><a href=""> <img src="../image/directions/image3.svg" width="55" alt=""> Рекламная полиграфия</a>
                 </li>
-                <li><a href=""> <img src="../image/directions/image4.svg" alt=""> Сувенирная продукция</a>
+                <li><a href=""> <img src="../image/directions/image4.svg" width="55" alt=""> Сувенирная продукция</a>
                 </li>
-                <li><a href=""> <img src="../image/directions/image5.svg" alt=""> Внутренняя реклама</a>
+                <li><a href=""> <img src="../image/directions/image5.svg" width="55" alt=""> Внутренняя реклама</a>
                 </li>
-                <li><a href=""> <img src="../image/directions/image7.svg" alt=""> Брендирование одежды</a>
+                <li><a href=""> <img src="../image/directions/image7.svg" width="55" alt=""> Брендирование одежды</a>
                 </li>
-                <li><a href=""> <img src="../image/directions/image8.svg" alt=""> Брендирование транспорта</a>
+                <li><a href=""> <img src="../image/directions/image8.svg" width="55" alt=""> Брендирование транспорта</a>
                 </li>
-                <li><a href=""> <img src="../image/directions/image9.svg" alt=""> Все услуги</a>
+                <li><a href=""> <img src="../image/directions/image9.svg" width="55" alt=""> Все услуги</a>
                 </li>
             </ul>
         </section>
