--- a/html/services.html
+++ b/html/services.html
@@ -19,101 +19,41 @@
     </header>
     <main>
         <section>
-            <h1>Услуги</h1>
+            <h1>Сервис</h1>
+            <h2>Разработка дизайн-макета</h2>
+            <p> Мы занимаемся разработкой дизайн-макетов различной сложности. 
+                Изготовливаем дизайн-макеты вывесок, банеров, рекламных щитов, визиток, буклетов, календарей и прочей продукции. 
+                Дизайн-макет - это идеи по художественному и техническому оформлению рекламной информации, представленные в графическом виде. 
+                Не важно, будет ли это билборд или фирменный бланк - разработка дизайн-макета необходима всегда.
+                Компания  Promomix готова предложить услуги дизайнеров, имеющих высокую квалификацию. 
+                Все работы по дизайну осуществляются максимально  качественно и оперативно.
+            </p>
+            <img src="../image/services/image1.jpg" width="570" alt="">
+            <button type="button">Прайс-лист</button>
+        </section>
+        <section>
+            <h2>Согласование вывески</h2>
+            <p>Все виды маркетинговой продукции, которые размещаются на фасадах задний, обязательно нужно согласовывать в комитете по архитектуре
+                и градостроительству. Согласование вывески - это достаточно сложный процесс, который занимает много времени.       
+                Наша компания возьмёт на себя все проблемы с согласованием вывесок
+                и поможет в быстром решении этого вопроса. У нас работают специалисты, которые имеют успешный опыт прохождения данной процедуры,  
+                поэтому мы с уверенностью можем гарантировать вам удачное подписание документов с первого раза.
+            </p>
             <ul>
-                <li><a href=""> <img src="../image/directions/image1.svg" width="55" alt=""> Наружная реклама</a>
-                    <ul>
-                        <li><a href="">Баннеры и брандмауэры</a></li>
-                        <li><a href="">Оформление фасада</a></li>
-                        <li><a href="">Вывески</a></li>
-                        <li><a href="">Таблички и указатели</a></li>
-                        <li><a href="">Информационные стелы</a></li>
-                        <li><a href="">Стенды уличные</a></li>
-                    </ul>
+                <li>
+                    <img src="../image/services/image2.jpg" alt="">
+                    <h3>Варианты размещения</h3>
+                    <p>Подбираем для вас оптимальные варианты размещения и оформления рекламных или информационных конструкций.</p>
                 </li>
-                <li><a href=""> <img src="../image/directions/image2.svg" width="55" alt=""> Широкоформатная печать</a>
-                    <ul>
-                        <li><a href="">Печать баннеров</a></li>
-                        <li><a href="">Печать на плёнке</a></li>
-                        <li><a href="">Фотообои</a></li>
-                        <li><a href="">Печать постеров</a></li>
-                        <li><a href="">Печать на холсте</a></li>
-                    </ul>
+                <li>
+                    <img src="../image/services/image3.jpg" alt="">
+                    <h3>Подготовка документов</h3>
+                    <p>Подготавливаем необходимые документы и фотоматериалы, разрабатываем эскизы, дизайн-проекты и технические расчеты.</p>
                 </li>
-                <li><a href=""> <img src="../image/directions/image3.svg" width="55" alt=""> Рекламная полиграфия</a>
-                    <ul>
-                        <li><a href="">Пластиковые карты</a></li>
-                        <li><a href="">Наклейки и стикеры</a></li>
-                        <li><a href="">Визитные карты</a></li>
-                        <li><a href="">Буклеты и лифлеты</a></li>
-                        <li><a href="">POS материалы</a></li>
-                        <li><a href="">Каталоги и журналы</a></li>
-                        <li><a href="">Листовки и флаеры</a></li>
-                        <li><a href="">Блокноты</a></li>
-                        <li><a href="">Ежедневники</a></li>
-                        <li><a href="">Бирки</a></li>
-                        <li><a href="">Плакаты и постеры</a></li>
-                        <li><a href="">Конверты</a></li>
-                        <li><a href="">Пакеты</a></li>
-                        <li><a href="">Бланки</a></li>
-                        <li><a href="">Календари</a></li>
-                        <li><a href="">Упаковка</a></li>
-                        <li><a href="">Брошюры</a></li>
-                        <li><a href="">Открытки</a></li>
-                        <li><a href="">Папки</a></li>
-                    </ul>
-                </li>
-                <li><a href=""> <img src="../image/directions/image4.svg" width="55" alt=""> Сувенирная продукция</a>
-                    <ul>
-                        <li><a href="">Праздничные сувениры</a></li>
-                        <li><a href="">Подарочные наборы</a></li>
-                        <li><a href="">Флажки и флаги</a></li>
-                        <li><a href="">Брелоки</a></li>
-                        <li><a href="">Ручки</a></li>
-                        <li><a href="">Кружки</a></li>
-                        <li><a href="">Интерьерные сувениры</a></li>
-                        <li><a href="">Значки и бейджи</a></li>
-                        <li><a href="">Чехлы</a></li>
-                        <li><a href="">Флешки</a></li>
-                        <li><a href="">Награды</a></li>
-                        <li><a href="">Магниты</a></li>
-                    </ul>
-                </li>
-                <li><a href=""> <img src="../image/directions/image5.svg" width="55" alt=""> Внутренняя реклама</a>
-                    <ul>
-                        <li><a href="">Стойки ресепшн</a></li>
-                        <li><a href="">Таблички и навигация</a></li>
-                        <li><a href="">Оформление витрин</a></li>
-                        <li><a href="">Стенды</a></li>
-                        <li><a href="">Выставочное оборудование</a></li>
-                        <li><a href="">Праздничное оформление</a></li>
-                        <li><a href="">Световые панели</a></li>
-                    </ul>
-                </li>
-                <li><a href=""> <img src="../image/directions/image6.svg" width="55" alt=""> Гравировка и резка</a>
-                    <ul>
-                        <li><a href="">Лазерная резка и гравировка</a></li>
-                        <li><a href="">Плоттерная резка</a></li>
-                        <li><a href="">Фрезерная резка и гравировка</a></li>
-                    </ul>
-                </li>
-                <li><a href=""> <img src="../image/directions/image7.svg" width="55" alt=""> Брендирование одежды</a>
-                    <ul>
-                        <li><a href="">Корпоративная одежда</a></li>
-                        <li><a href="">Домашний текстиль</a></li>
-                        <li><a href="">Принт на одежде</a></li>
-                        <li><a href="">Промо одежда</a></li>
-                        <li><a href="">Нашивки и шевроны</a></li>
-                        <li><a href="">Сумки и рюкзаки</a></li>
-                        <li><a href="">Аксессуары</a></li>
-                        <li><a href="">Этикетки </a></li>
-                    </ul>
-                </li>
-                <li><a href=""> <img src="../image/directions/image8.svg" width="55" alt=""> Брендирование транспорта</a>
-                    <ul>
-                        <li><a href="">Лайтбоксы на крышу</a></li>
-                        <li><a href="">Оклейка автомобилей</a></li>
-                    </ul>
+                <li>
+                    <img src="../image/works/image1.jpg" alt="">
+                    <h3>Согласование документов</h3>
+                    <p>Осуществляем согласование документов в соответствующих инстанциях, после чего передаём вам готовый пакет документов.</p>
                 </li>
             </ul>
         </section>
