--- a/html/posts.html
+++ b/html/posts.html
@@ -17,6 +17,128 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h1>Статьи и новости</h1>
+            <img src="../image/posts/image1.jpg" width="1200" alt="">
+            <div>
+                <p>21. 03. 2020    |    НОВОСТЬ</p>
+                <h2>Уникальная услуга «вывеска в аренду»</h2>
+                <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
+                <button type="button">подробнее</button>
+            </div>
+        </section>
+        <!-- Новости и Статьи -->
+        <section>
+            <h2></h2>
+            <ul>
+                <li>
+                    <p>новость</p>
+                    <a href=""><img src="../image/posts/image2.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Собственный стиль в печати на футболках</h3>
+                    <p>Футболки – универсальный вид одежды, который можно встретить
+                        в гардеробах миллионов людей. Удобные, стильные, привлекательные
+                        с различными надписями и изображениями они всегда в тренде. 
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+                <li>
+                    <p>статья</p>
+                    <a href=""><img src="../image/posts/image3.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Лайфхаки полиграфии от заказчиков</h3>
+                    <p>Лайфхаки полиграфии от опытных заказчиков. 
+                        Сегодня услуги по печати рекламных материалов, 
+                        кажется, не предоставляет только ленивый. 
+                        Так как предложений очень много, то, соответственно и достаточно высок.
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+                <li>
+                    <p>статья</p>
+                    <a href=""><img src="../image/posts/image4.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Полиграфия для бизнеса</h3>
+                    <p>Чтобы выделиться среди конкурентов на современном рынке товаров
+                        и услуг, или познакомить как можно большее количество людей с 
+                        новым предприятием, нужна эффективная реклама. 
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+                <li>
+                    <p>новость</p>
+                    <a href=""><img src="../image/posts/image5.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Типография, кто изобрёл печатное дело?</h3>
+                    <p>Способ получения отпечатков на глине, пергаменте, папирусе, бумаге, ткани и т.д. 
+                        с помощью тем или иным способом обработанных поверхностей камня, дерева, металла известен очень давно.
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+            </ul>
+        </section>
+        <!-- Рассылка -->
+        <section>
+            <h2>Рассылка</h2>
+            <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+            <form>
+                <input type="email" placeholder="ваш e-mail">
+                <!-- <input type="submit" placeholder="&#8594;"> -->
+                <button type="submit">&#8594;</button>
+            </form>
+        </section>
+        <!-- Новости и Статьи 2 -->
+        <section>
+            <h2></h2>
+            <ul>
+                <li>
+                    <p>новость</p>
+                    <a href=""><img src="../image/posts/image6.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Как правильно подготовить дизайн-макет</h3>
+                    <p>В наше время реклама и печатные изделия, как ее немаловажная разновидность, играют большую роль в 
+                        продвижении предприятий и организаций, и их товаров и услуг на рынке.  
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+                <li>
+                    <p>статья</p>
+                    <a href=""><img src="../image/posts/image7.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Полиграфия для бизнеса помогает увеличивать продажи</h3>
+                    <p>Чтобы выделиться среди конкурентов на современном рынке товаров
+                        и услуг, или познакомить как можно большее количество людей с 
+                        новым предприятием, нужна эффективная реклама.
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+                <li>
+                    <p>статья</p>
+                    <a href=""><img src="../image/posts/image8.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Из чего складывается стоимость тиража</h3>
+                    <p>Стоимость тиража печатных изданий Практически у любого заказчика, 
+                        обратившегося в полиграфическую компанию, возникают вполне логичные 
+                        вопросы: из чего складывается стоимость тиража?  
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+                <li>
+                    <p>новость</p>
+                    <a href=""><img src="../image/posts/image9.jpg" width="420" alt=""></a>
+                    <p>21. 03. 2020</p>
+                    <h3>Печать открыток. Интересные факты</h3>
+                    <p>Печать открыток. Интересные факты из истории Печать открыток была
+                        и остается востребованной услугой в каждой полиграфической компании. 
+                        Открытки дарят не только родным и знакомым. 
+                    </p>
+                    <button type="button">подробнее</button>
+                </li>
+            </ul>
+            <button type="button">Показать ещё</button>
+        </section>
+    </main>
     <footer>
         <div>
             <div>
