--- a/html/post.html
+++ b/html/post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posts</title>
+    <title>Post</title>
 </head>
 <body>
     <header>
@@ -17,6 +17,129 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <!-- Собственный стиль -->
+        <section>
+            <div>
+                <p>21. 03. 2020    |    НОВОСТЬ</p>
+                <h1>Собственный стиль в печати на футболках</h1>
+                <img src="../image/post/image1.jpg" width="1400" alt="">
+            </div>
+            <div>
+                <h2>Что такое печать на футболках</h2>
+                <p>Футболки – универсальный вид одежды, который можно встретить в гардеробах миллионов людей. 
+                    Удобные, стильные, привлекательные с различными надписями и изображениями они всегда в тренде. 
+                    Цветовая гамма модных футболок обширна, что позволяет без труда подобрать футболку определенного 
+                    цвета и оттенка. Максимально модными их делают различные виды отделки. Украшенные таким способом 
+                    они превращаются в необычные вещи, удачно сочетающиеся с любым гардеробом.                    
+                    Оригинальный дизайн футболок с разнообразными рисунками позволяет современным модницам и модникам 
+                    значительно выделяться из толпы. Этот вид одежды в таком формате довольно молодое явление в мире моды. 
+                    До недавнего времени нанесение печати на материал было простым. Сегодня современные способы нанесения изображений, 
+                    рисунков, логотипов позволяют заказать печать на футболках в любом объеме. Футболки используют в качестве 
+                    универсального рекламного инструмента, заказывают в виде корпоративной одежды, преподносят в качестве подарков.
+                </p>
+                <img src="../image/post/image2.jpg" width="570" alt="">
+                <img src="../image/post/image3.jpg" width="570" alt="">
+            </div>
+        </section>
+        <!-- способы печати -->
+        <section>
+            <h2>Способы печати</h2>
+            <p>Шелкография - оригинальный способ, позволяющий в промышленных масштабах за короткое время наносить печать на 
+                футболках по заданным параметрам. Этот способ с точки зрения экономии наиболее выгоден заказчику. 
+                Печатные изображения отличаются износостойкостью и отличным качеством. Подходит тем кто заинтересован в наименьших 
+                затратах при заказах небольших тиражей. В рабочем процессе задействована печатная форма – трафарет. Через нее по 
+                контуру изображения краска проникает на материал. Современный технологический процесс позволяет методом шелкографии 
+                создавать уникальные разноцветные изображения, узоры. Производится печать на футболки поэтапно. Высокотехнологичные 
+                методы, уникальные свойства специальной краски делают печать изображения особенно контрастными, а цвета наиболее яркими. 
+                Полученное изображение устойчиво к истиранию, способно сохранить свои первоначальные свойства в течение длительного времени. 
+                Спрос на такую продукцию постоянно растет. Заказать печать на футболках дешево, можно в компании предварительно связавшись с менеджером.
+            </p>
+            <div>
+                <img src="../image/post/image4.jpg" width="255" alt="">
+                <img src="../image/post/image5.jpg" width="255" alt="">
+                <img src="../image/post/image6.jpg" width="255" alt="">
+                <img src="../image/post/image7.jpg" width="255" alt="">
+            </div>
+        </section>
+        <!-- Кому нужна печать на футболках -->
+        <section>
+            <h2>Кому нужна печать на футболках</h2>
+            <p>Самая удобная вещь, которую можно надевать практически каждый день – футболка. Как найти именно ту, 
+                которая соответствует образу? Не всегда поиски определенной модели и желаемого рисунка успешны. 
+                Можно затратить немало времени в хождениях по рынкам и магазинам в тщетных поисках. Одним из самых 
+                востребованных изделий на сегодняшний день является футболка с печатью рисунка по индивидуальному заказу.
+                Доступные технологии позволяют наносить рисунки на любую, даже самую тонкую поверхность ткани. 
+                На изделиях разных размеров можно сделать любую печать с логотипом, текстом или фотографией. 
+                Ткань футболок высокого качества, она безопасна, приятна, не мнется и прекрасно пропускает воздух. 
+                Заказывая футболку с печатью на сайте компании можно ознакомиться с каталогом, где для обозрения 
+                представлены разные модели футболок. Требование к качеству печати постоянно растет. 
+                Компании, занимающиеся производством печати на футболках, заботятся о своем имидже и 
+                предлагают широкий ассортимент своей продукции. Для заказчиков печать на футболках недорого 
+                обойдется несмотря какой объем будет заявлен. Многие предпочитают не покупать, а заказывать футболки 
+                с неповторимыми, оригинальными изображениями.
+            </p>
+            <p>Поделитесь статьей</p>
+            <ul>                    
+                <li>
+                    <a href="">Facebook</a>    
+                </li>
+                <li>
+                    <a href="">Vkontakte</a>
+                </li>
+                <li>
+                    <a href="">Google</a>
+                </li>
+                <li>
+                    <a href="">Twitter</a>
+                </li>
+            </ul>
+        </section>
+        <!-- Все самое интересное -->
+        <section>
+        <p>статьи и новости</p>
+        <h2>Все самое интересное</h2>
+        <ul>
+            <li>
+                <p>Новость</p>
+                <div>
+                    <img src="../image/interesting/image1.jpg" width="420" alt="">
+                </div>
+                <div>
+                    <p>21. 03. 2020</p>
+                    <h3>Уникальная услуга «вывеска в аренду»</h3>
+                    <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
+                    <button type="button">Подробнее</button>
+                </div>
+            </li>
+            <li>
+                <p>Статья</p>
+                <div>
+                    <img src="../image/interesting/image2.jpg" width="420" alt="">
+                </div>
+                <div>
+                    <p>21. 03. 2020</p>
+                    <h3>Лайфхаки полиграфии от заказчиков</h3>
+                    <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
+                    <button type="button">Подробнее</button>
+                </div>
+            </li>
+            <li>
+                <p>Статья</p>
+                <div>
+                    <img src="../image/interesting/image3.jpg" width="420" alt="">
+                </div>
+                <div>
+                    <p>21. 03. 2020</p>
+                    <h3>Полиграфия для бизнеса</h3>
+                    <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
+                    <button type="button">Подробнее</button>
+                </div>
+            </li>
+        </ul>
+        <a href="">Все статьи</a>
+        </section>
+    </main>
     <footer>
         <div>
             <div>
